Add location service (#94)
* feat(core): Add logger and basic config files for express

* merge from main fork

* merge fork main

* fix(prisma): Add prisma default schema location for client generation

* feat(location): Add location services

* fix(config): remove package-lock.json.bak file

* fix(locations): add code review fixes

* fix(test): fix error on location repository testing

* fix(test): add copyright header on test files

* fix(location): temporarily remove repository-test prisma-client causing leaked

* fix(format): fix linter and code format
