# src/server/services/locations/entity.ts
@@ -17,34 +17,16 @@
  *                                                                                *
  **********************************************************************************/
 
-import winston from "winston";
-import expressWinston from "express-winston";
-import { cfg } from "../config";
+export interface Location {
+  entityId: number;
+  locationName: string;
+  countryCode: string;
+  dataCenter: string;
+  createdAt: number;
+  updatedAt: number;
+  createdBy: string;
+  updatedBy: string;
+}
 
-const transports = [
-  new winston.transports.Console({
-    level: cfg.env === "production" ? "info" : "debug",
-  }),
-];
-
-const options: winston.LoggerOptions = {
-  transports,
-};
-
-export const requestLogger = expressWinston.logger({
-  transports,
-  format: winston.format.combine(winston.format.json()),
-  expressFormat: true,
-  colorize: false,
-  level: "debug",
-});
-
-export const expressErrorLogger = expressWinston.errorLogger({
-  transports,
-  format: winston.format.combine(winston.format.json()),
-  msg:
-    "{{err.message}} {{res.statusCode}} {{req.method}} with error: {{err}} and request: {{req}} and response: {{res}}",
-});
-
-export const logger = winston.createLogger(options);
-logger.debug("  Logging initialized at debug level");
+export type LocationCreate = Omit<Location, "entityId">;
+export type LocationUpdate = Omit<Location, "createdAt" | "createdBy">;
